# pluma-plugins

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac
plugins/: .gitignore  Makefile.am  gpdefs.py.in
plugins/bookmarks/: Makefile.am  bookmarks.pluma-plugin.desktop.in.in  pluma-bookmarks-plugin.c  pluma-bookmarks-plugin.h
plugins/bracketcompletion/: Makefile.am  bracketcompletion.pluma-plugin.desktop.in.in  bracketcompletion.py
plugins/charmap/: .gitignore  Makefile.am  charmap.pluma-plugin.desktop.in.in  pluma-charmap-panel.c  pluma-charmap-panel.h  pluma-charmap-plugin.c  pluma-charmap-plugin.h
plugins/codecomment/: .gitignore  Makefile.am  codecomment.pluma-plugin.desktop.in.in  codecomment.py
plugins/colorpicker/: .gitignore  Makefile.am  colorpicker.pluma-plugin.desktop.in.in  colorpicker.py
plugins/commander/: Makefile.am  commander.pluma-plugin.desktop.in.in
plugins/commander/commander/: Makefile.am  __init__.py  entry.py  history.py  info.py  transparentwindow.py  utils.py  windowhelper.py
plugins/commander/commander/commands/: Makefile.am  __init__.py  accel_group.py  completion.py  exceptions.py  method.py  module.py  result.py  rollbackimporter.py
plugins/commander/modules/: Makefile.am  align.py  bookmark.py  doc.py  edit.py  format.py  goto.py  grep.py  help.py  move.py  reload.py  set.py  shell.py
plugins/commander/modules/find/: Makefile.am  __init__.py  finder.py  regex.py  test.py
plugins/drawspaces/: Makefile.am  drawspaces.pluma-plugin.desktop.in.in  drawspaces.ui  org.mate.pluma.plugins.drawspaces.gschema.xml.in.in  pluma-drawspaces-plugin.c  pluma-drawspaces-plugin.h  pluma-drawspaces.schemas.in  pluma-plugins-drawspaces.convert
plugins/joinlines/: .gitignore  Makefile.am  joinlines.pluma-plugin.desktop.in.in  joinlines.py
plugins/multiedit/: Makefile.am  multiedit.pluma-plugin.desktop.in.in
plugins/multiedit/multiedit/: Makefile.am  __init__.py  constants.py  documenthelper.py  windowhelper.py
plugins/sessionsaver/: Makefile.am  __init__.py  dialogs.py  sessionsaver.pluma-plugin.desktop.in.in  sessionsaver.ui  store.py
plugins/showtabbar/: .gitignore  Makefile.am  org.mate.pluma.plugins.showtabbar.gschema.xml.in.in  pluma-plugins-showtabbar.convert  pluma-show-tabbar-plugin.c  pluma-show-tabbar-plugin.h  pluma-show-tabbar-plugin.schemas.in  showtabbar.pluma-plugin.desktop.in.in
plugins/smartspaces/: .gitignore  Makefile.am  smartspaces.pluma-plugin.desktop.in.in  smartspaces.py
plugins/synctex/: Makefile.am  synctex.pluma-plugin.desktop.in.in
plugins/synctex/synctex/: Makefile.am  __init__.py  atril_dbus.py  synctex.py
plugins/terminal/: .gitignore  Makefile.am  terminal.pluma-plugin.desktop.in.in  terminal.py
plugins/textsize/: Makefile.am  textsize.pluma-plugin.desktop.in.in
plugins/textsize/textsize/: Makefile.am  __init__.py  constants.py
plugins/wordcompletion/: Makefile.am  pluma-word-completion-plugin.c  pluma-word-completion-plugin.h  wordcompletion.pluma-plugin.desktop.in.in
po/: .gitignore  ChangeLog  ChangeLog-20011116  ChangeLog-20060329  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  az.po  be.po  be@latin.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  (+34 more)
